# bunix

./: .gitignore  README.md  flake.nix
.github/workflows/: test.yml
lib/: default.nix
parsesr/: Cargo.toml
parsesr/src/: main.rs
parsesr/temp-test/: package.json
