[package]
name = "bunix-parser"
version = "0.1.0"
edition = "2021"
description = "Parser for Bun lockfiles, outputs JSON for Nix consumption"
license = "MIT"

[[bin]]
name = "bunix-parser"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
json5 = "0.4"
